Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,18 +34,20 @@
         <h1>
 <a name="conways-game-of-life" class="anchor" href="#conways-game-of-life"><span class="octicon octicon-link"></span></a>Conway's Game of Life</h1>
 
+<p>Click <a href="https://eonarheim.github.io/GameOfLife/app/index.html">here</a> to play</p>
+
 <h3>
 <a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>About</h3>
 
-<p>The Game of Life is a simulation of cellular automotons, evolution of the simulation is determined by the initial "seed".</p>
+<p>The Game of Life is a simulation of cellular automatons, evolution of the simulation is determined by the initial "seed".</p>
 
 <p>The rules that drive the simulation are as follows:</p>
 
 <ul>
-<li>Any live cell with fewer than two live neighbours dies, as if caused by under-population.</li>
-<li>Any live cell with two or three live neighbours lives on to the next generation.</li>
-<li>Any live cell with more than three live neighbours dies, as if by overcrowding.</li>
-<li>Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.</li>
+<li>Any live cell with fewer than two live neighbors dies, as if caused by under-population.</li>
+<li>Any live cell with two or three live neighbors lives on to the next generation.</li>
+<li>Any live cell with more than three live neighbors dies, as if by overcrowding.</li>
+<li>Any dead cell with exactly three live neighbors becomes a live cell, as if by reproduction.</li>
 </ul><h3>
 <a name="how-to-play" class="anchor" href="#how-to-play"><span class="octicon octicon-link"></span></a>How to "play"</h3>
 
