--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Game Of Life : A JavaScript and HTML5 Canvas implementation of Conway's Game of Life" />
+    <meta name="description" content="Game Of Life : A JavaScript and HTML5 Canvas implementation of Conway&#39;s Game of Life" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/eonarheim/GameOfLife">View on GitHub</a>
 
           <h1 id="project_title">Game Of Life</h1>
-          <h2 id="project_tagline">A JavaScript and HTML5 Canvas implementation of Conway's Game of Life</h2>
+          <h2 id="project_tagline">A JavaScript and HTML5 Canvas implementation of Conway&#39;s Game of Life</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/eonarheim/GameOfLife/zipball/master">Download this project as a .zip file</a>
@@ -34,7 +34,7 @@
         <h1>
 <a name="conways-game-of-life" class="anchor" href="#conways-game-of-life"><span class="octicon octicon-link"></span></a>Conway's Game of Life</h1>
 
-<p>Click <a href="https://eonarheim.github.io/GameOfLife/app/index.html">here</a> to play</p>
+<p>Click <a href="http://eonarheim.github.io/GameOfLife/app/index.html">here</a> to play</p>
 
 <h3>
 <a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>About</h3>
